tdf#120450: Radiobuttons want to be checked too

Change-Id: If9b67bf866ed9fe38f69d440deeb2eccb87301bc